@@ -3,7 +3,8 @@
 	* modules/rawsock/rawsock.c (check_socket_type):
 	default=0 for the sake of getaddrinfo()
 	(RAWSOCK:GETADDRINFO): ai_canonname may be NULL
-	(RAWSOCK:RECVMSG, RAWSOCK:SENDMSG): fixed typo in the conditionals
+	(RAWSOCK:RECVMSG, RAWSOCK:SENDMSG): fixed typo in the conditionals,
+	fixed some typos
 
 2005-10-20  Sam Steingold  <sds@gnu.org>
 
